# fr-algo

./: .gitignore  .gitmodules  FRALGO.md  KEYWORDS.md  LICENSE  README.md  TODO.md  fralgo  fralgo.vim  fralgorepl  install.sh  pyproject.toml
.github/workflows/: python-app.yml
examples/: adresse.txt  adresse_corrigé.txt  algo10-5.algo  algo10-6.algo  algo10-7.algo  algo10-8.algo  algo10-9.algo  algo11-10.algo  algo8-1.algo  algo8-4.algo  algo8-7.algo  algo9-2.algo  algo9-3.algo  algo9-4.algo  algo9-9.algo  algo9-9b.algo  arguments.algo  array_simple.algo  array_sort.algo  array_sort2.algo  arrayinstruct.algo  bool.algo  chaine_alea.algo  conversion.algo  date_paques.algo  fichier1.txt  fichier2.txt  fichier3.txt  fichier_lecture.txt  fonctions.algo  importlib.algo  importtest.algo  lecture.algo  libtest.algo  minutes.algo  muladdth.algo  multable.algo  nir.algo  prenom.algo  quelconque.algo  (+8 more)
examples/std/: lib.algo
fralgo/: __init__.py  fralgocli.py  fralgolex.py  fralgoparse.py  fralgorepl.py  version.py
fralgo/lib/: ast.py  datatypes.py  exceptions.py  file.py  function.py  libman.py  structure.py  symbols.py  symbols2.py
src/: __init__.py  absytr.py  algoparser.py  datatypes.py  exceptions.py  fralgo.py  fralgoast.py  fralgoexception.py  fralgolex.py  fralgoparse.py  fralgorepl.py  lexer.py  parse.py  parser.py  symbols.py  tests.py
src/examples/: array_empty.algo  array_multi.algo  array_sort.algo  arrays_test.algo  bigger.algo  conditions.algo  minutes.algo  multable.algo  operations.algo  prenom-cond.algo  prenom.algo  secondes.algo  while.algo
src/fralgo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/lib/: absytr.py  ast.py  datatypes.py  exceptions.py  symbols.py
tests/: tests.py
