[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools', 'wheel']

[project]
name = 'fralgo'
dynamic = ['version']
authors = [
  { name = 'Stéphane MEYER (teegre)', email='stephane.meyer@afpa.fr' },
]
description = 'FRALGO est un interpréteur et un REPL pour le pseudo-langage de programmation ALGO.'
readme = 'README.md'
license = {file = 'LICENSE'}
classifiers = [
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
]

requires-python = '>=3.10'

[project.scripts]
fralgo = 'fralgo.fralgocli:main'
fralgorepl = 'fralgo.fralgorepl:main'

[project.urls]
Home = 'https://github.com/teegre/fralgo'

Tracker = 'https://github.com/teegre/fralgo/issues'
