[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools', 'wheel']

[project]
name = 'fralgo'
dynamic = ['version']
authors = [
  { name = 'Stéphane MEYER (teegre)', email='stephane.meyer@afpa.fr' },
]
description = 'FRALGO est un interpréteur et un REPL pour le pseudo-langage de programmation ALGO.'
readme = 'README.md'
license = "GPL-3.0-or-later"
classifiers = [
  'Programming Language :: Python :: 3.13',
]

requires-python = '>=3.10'

[tool.setuptools.dynamic]
version = {attr = 'fralgo.__version__'}

[project.scripts]
fralgo = 'fralgo.fralgocli:main'
fralgorepl = 'fralgo.fralgorepl:main'

[project.urls]
Home = 'https://github.com/teegre/fralgo'

Tracker = 'https://github.com/teegre/fralgo/issues'
